--- a/scw2016/tutorials/heterogeneity/heterogeneity.Rmd
+++ b/scw2016/tutorials/heterogeneity/heterogeneity.Rmd
@@ -1,1 +1,288 @@
- 
+---
+title: "Identifying and Characterizing Subpopulations Using Single Cell RNA-seq Data"
+author: Jean Fan
+date: November 23, 2016
+output: md_document
+---
+
+```{r, include = FALSE}
+library(knitr)
+opts_chunk$set(
+    warning = FALSE,
+    message = FALSE,
+    fig.path = 'figure/',
+    cache.path = 'cache/',
+    cache = TRUE
+)
+```
+
+# Identifying and Characterizing Subpopulations Using Single Cell RNA-seq Data
+
+In this session, we will become familiar with a few computational techniques we can use to identify and characterize subpopulations using single cell RNA-seq data. 
+
+## Getting started
+
+A single cell dataset from [Camp et al.](http://www.pnas.org/content/112/51/15672) has been pre-prepared for you. The data is provided as a matrix of gene counts, where each column corresponds to a cell and each row a gene.
+
+```{r, 'clean'}
+load('../../data/cd.RData') 
+
+# how many genes? how many cells?
+dim(cd)
+# look at snippet of data
+cd[1:5,1:5]
+
+# filter out low-gene cells (often empty wells)
+cd <- cd[, colSums(cd>0)>1.8e3]
+# remove genes that don't have many reads
+cd <- cd[rowSums(cd)>10, ]
+# remove genes that are not seen in a sufficient number of cells
+cd <- cd[rowSums(cd>0)>5, ]
+
+# how many genes and cells after filtering?
+dim(cd)
+
+# transform to make more data normal
+mat <- log10(as.matrix(cd)+1)
+# look at snippet of data
+mat[1:5, 1:5]
+```
+
+In the original publication, the authors proposed two main subpopulations: neurons and neuroprogenitor cells (NPCs). These labels have also been provided to you as a reference so we can see how different methods perform in recapitulating these labels. 
+
+```{r 'sg'}
+load('../../data/sg.RData') 
+head(sg, 5)
+```
+
+# PCA
+
+Note that there are over 10,000 genes that can be used to cluster cells into subpopulations. One fast, easy, and common technique to identify subpopulations is by using dimensionality reduction to summarize the data into 2 dimensions and then visually identify obvious clusters. Principal component analysis (PCA) is a linear dimensionality reduction method.
+
+```{r, 'pca', fig.width=5, fig.height=5}
+# use principal component analysis for dimensionality reduction
+base.pca <- prcomp(t(mat))
+# visualize in 2D the first two principal components and color by cell type
+plot(base.pca$x[,1], base.pca$x[,2], col=sg, pch=16, main='PCA')
+```
+
+# tSNE
+
+T-embedded stochastic neighbor embedding (tSNE) is a non-linear dimensionality reduction method. Note that in tSNE, the perplexity parameter is an estimate of the number of effective neighbors. Here, we have 224 cells. A perplexity of 10 is suitable. For larger or smaller numbers of cells, you may want to increase the perplexity accordingly.
+
+```{r, 'tsne', fig.width=5, fig.height=5}
+library(Rtsne)
+d <- stats::dist(t(mat))
+set.seed(0) # tsne has some stochastic steps (gradient descent) so need to set random 
+tsne_out <- Rtsne(d, is_distance=TRUE, perplexity=10, verbose = TRUE) 
+plot(tsne_out$Y, col=sg, pch=16, main='tSNE')
+```
+
+Note with tSNE, your results are stochastic. Change the seed, change your results.
+
+```{r, 'tsne-2', fig.width=5, fig.height=5}
+set.seed(1) # tsne has some stochastic steps (gradient descent) so need to set random 
+tsne_out <- Rtsne(d, is_distance=TRUE, perplexity=10, verbose = TRUE) 
+plot(tsne_out$Y, col=sg, pch=16, main='tSNE')
+```
+
+Still, we may be wondering what genes and pathways characterize these subpopulation? For that, additional analysis is often needed and dimensionality reduction alone does not provide us with such insight. 
+
+# Differential expression analysis
+
+Given the two clusters we identified previously, we can identify differentially expressed genes between the two groups of single cells using `scde`. 
+
+```{r, 'scde'}
+library(scde)
+```
+
+Briefly, `scde` models each cell using a mixture of a negative binomial (NB) distribution (for the amplified/detected transcripts) and low-level Poisson distribution (for the unobserved or background-level signal of genes that failed to amplify or were not detected for other reasons). These models can then be used to identify robustly differentially expressed genes. For more information, please refer to the original manuscript by [Kharchenko et al](http://www.nature.com/nmeth/journal/v11/n7/full/nmeth.2967.html). 
+
+```{r, 'knn', eval=FALSE}
+# EVALUATION NOT NEEDED FOR SAKE OF TIME
+knn <- knn.error.models(cd, k = ncol(cd)/4, n.cores = 1, min.count.threshold = 2, min.nonfailed = 5, max.model.plots = 10)
+```
+
+```{r, 'scde-2', fig.width=5, fig.height=5}
+# just load from what we precomputed for you
+load('../../data/knn.RData') 
+
+# estimate gene expression prior
+prior <- scde.expression.prior(models = knn, counts = cd, length.out = 400, show.plot = FALSE)
+
+# run differential expression tests on a subset of genes (to save time)
+vi <- c("BCL11B", "CDH6", "CNTNAP2", "GRIK3", "NEUROD6", "RTN1", "RUNX1T1", "SERINC5", "SLC24A2", "STMN2", "AIF1L", "ANP32E", "ARID3C", "ASPM", "ATP1A2", "AURKB", "AXL", "BCAN", "BDH2", "C12orf48")
+ediff <- scde.expression.difference(knn, cd[vi,], prior, groups = sg, n.cores = 1, verbose = 1)
+
+# top upregulated genes (tail would show top downregulated ones)
+head(ediff[order(abs(ediff$Z), decreasing = TRUE), ], )
+
+# visualize results for one gene
+scde.test.gene.expression.difference("ATP1A2", knn, cd, prior, groups = sg)
+
+# heatmap
+ediff.sig <- ediff[abs(ediff$cZ) > 1.96, ]
+ediff.sig.up <- rownames(ediff.sig[order(ediff.sig$cZ, decreasing = TRUE), ])[1:10]
+ediff.sig.down <- rownames(ediff.sig[order(ediff.sig$cZ, decreasing = FALSE), ])[1:10]
+heatmap(mat[c(ediff.sig.up, ediff.sig.down),], Rowv=NA, ColSideColors = rainbow(2)[sg],  col=colorRampPalette(c('blue', 'white', 'red'))(100), scale="none")
+```
+
+Once we have a set of differentially expressed genes, we may use techniques such as gene set enrichment analysis (GSEA) to determine which pathways are differentially up or down regulated. GSEA is not specific to single cell methods and not included in this session but users are encouraged to check out this [light-weight R implementation with tutorials](https://github.com/JEFworks/liger) on their own time. 
+
+# Pathway and gene set overdispersion analysis
+
+Alternatively, we may be interested in finer, potentially overlapping/non-binary subpopulations. For example, if we were clustering apples, PCA might separate red apples from green apples, but we may be interested in sweet vs. sour apples, or high fiber apples from low fiber apples. `PAGODA` is a method developed by the Kharchenko lab that enables identification and characterization of subpopulations in a manner that resolves these overlapping aspects of transcriptional heterogeneity. For more information, please refer to the original manuscript by [Fan et al](http://www.nature.com/nmeth/journal/v13/n3/full/nmeth.3734.html). 
+
+```{r, 'pagoda', fig.width=5, fig.height=5}
+library(scde)
+
+# again, PAGODA like SCDE relies on error models
+load('../../data/cd.RData') 
+load('../../data/knn.RData') 
+```
+
+`PAGODA` relies on accurate quantification of excess variance or overdispersion in genes and gene sets in order to cluster cells and identify subpopulations. Accurate quantification of this overdispersion means that we must normalize out expected levels of technical and intrinsic biological noise. Intuitively, lowly-expressed genes are often more prone to drop-out and thus may exhibit large variances simply due to such technical noise.
+
+```{r, 'pagoda-varnorm', eval=FALSE}
+# EVALUATION NOT NEEDED FOR SAKE OF TIME
+varinfo <- pagoda.varnorm(knn, counts = cd, trim = 3/ncol(cd), max.adj.var = 5, n.cores = 1, plot = TRUE)
+# normalize out sequencing depth as well
+varinfo <- pagoda.subtract.aspect(varinfo, colSums(cd[, rownames(knn)]>0))
+```
+
+```{r, 'pagoda-varnorm-2'}
+# just load from what we precomputed for you
+load('../../data/varinfo.RData') 
+```
+
+When assessing for overdispersion in gene sets, we can take advantage of pre-defined pathway gene sets such as GO annotations and look for pathways that exhibit statistically significant excess of coordinated variability. Intuitively, if a pathway is differentially perturbed, we expect all genes within said pathway to be upregulated or downregulated in the same group of cells. In PAGODA, for each gene set, we tested whether the amount of variance explained by the first principal component significantly exceed the background expectation.
+
+```{r, 'pagoda-go', fig.width=5, fig.height=5}
+# load gene sets
+load('../../data/go.env.RData')
+# look at some gene sets
+head(ls(go.env))
+# look at genes in gene set
+get("GO:0000002 mitochondrial genome maintenance", go.env)
+# filter out gene sets that are too small or too big
+go.env <- list2env(clean.gos(go.env, min.size=10, max.size=100))
+# how many pathways
+length(go.env)
+```
+
+```{r, 'pagoda-pwpca', eval=FALSE}
+# EVALUATION NOT NEEDED FOR SAKE OF TIME
+# pathway overdispersion
+pwpca <- pagoda.pathway.wPCA(varinfo, go.env, n.components = 1, n.cores = 1)
+```
+
+Instead of relying on pre-defined pathways, we can also test on 'de novo' gene sets whose expression profiles are well-correlated within the given dataset.
+
+```{r, 'pagoda-denovo', eval=FALSE}
+# EVALUATION NOT NEEDED FOR SAKE OF TIME
+# de novo gene sets
+clpca <- pagoda.gene.clusters(varinfo, trim = 7.1/ncol(varinfo$mat), n.clusters = 150, n.cores = 1, plot = FALSE)
+```
+
+Testing these pre-defined pathways and annotated gene sets may take a few minutes so for the sake of time, we will load a pre-computed version.
+
+```{r, 'pagoda-pathway', fig.width=5, fig.height=5}
+load('../../data/pwpca.RData')
+clpca <- NULL # For the sake of time, set to NULL
+```
+
+Taking into consideration both pre-defined pathways and de-novo gene sets, we can see which aspects of heterogeneity are the most overdispersed and base our cell cluster only on the most overdispersed and informative pathways and gene sets.
+
+```{r, 'pagoda-aspect', fig.width=5, fig.height=5}
+# get full info on the top aspects
+df <- pagoda.top.aspects(pwpca, clpca, z.score = 1.96, return.table = TRUE)
+head(df)
+tam <- pagoda.top.aspects(pwpca, clpca, z.score = 1.96)
+# determine overall cell clustering
+hc <- pagoda.cluster.cells(tam, varinfo)
+```
+
+Because many of our annotated pathways and de novo gene sets likely share many genes or exhibit similar patterns of variability, we must reduce such redundancy to come up with a final coherent characterization of subpopulations. 
+
+```{r, 'pagoda-tam', fig.width=8, fig.height=5}
+# reduce redundant aspects
+tamr <- pagoda.reduce.loading.redundancy(tam, pwpca, clpca)
+tamr2 <- pagoda.reduce.redundancy(tamr, plot = FALSE)
+# view final result
+pagoda.view.aspects(tamr2, cell.clustering = hc, box = TRUE, labCol = NA, margins = c(0.5, 20), col.cols = rbind(sg), top=10)
+```
+
+We can create an app to further interactively browse the results. A pre-compiled app has been launched for you here: http://pklab.med.harvard.edu/cgi-bin/R/rook/scw.xiaochang/index.html. 
+
+```{r, 'pagoda-app', eval=FALSE}
+# compile a browsable app
+app <- make.pagoda.app(tamr2, tam, varinfo, go.env, pwpca, clpca, col.cols = rbind(sg), cell.clustering = hc, title = "Camp")
+# show app in the browser (port 1468)
+show.app(app, "Camp", browse = TRUE, port = 1468)  
+```
+
+Based on PAGODA results, we can see the main division between neurons and NPCs but we can also see further heterogeneity not visible by PCA or tSNE alone. In this case, prior knowledge on known marker genes can allow us to better interpret these identified subpopulations as IPCs, RGs, Immature Neurons, and Mature Neurons. 
+
+```{r, 'pagoda-marker', fig.width=5, fig.height=5}
+# visualize a few known markers
+markers <- c(
+    "SCN2A","GRIK3","CDH6","NRCAM","SOX11",
+    "SLC24A2", "SOX4", "DCX", "TUBB3","MAPT",
+    "KHDRBS3",  "KHDRBS2", "KHDRBS1", "RBFOX3",
+    "CELF6", "CELF5", "CELF4", "CELF3", "CELF2", "CELF1",
+    "PTBP2", "PTBP1", "ZFP36L2",
+    "HMGN2", "PAX6", "SFRP1",
+    "SOX2", "HES1", "NOTCH2", "CLU","HOPX",
+    "MKI67","TPX2",
+    "EOMES", "NEUROD4","HES6"
+    )
+# heatmap
+mat <- varinfo$mat[markers,]
+range(mat)
+mat[mat < -1] <- -1
+mat[mat > 1] <- 1
+heatmap(mat[,hc$labels], Colv=as.dendrogram(hc), Rowv=NA, scale="none", col=colorRampPalette(c("blue", "white", "red"))(100), ColSideColors=rainbow(2)[sg])
+
+# Alternatively, define more refined subpopulations
+sg2 <- as.factor(cutree(hc, k=4))
+names(sg2) <- hc$labels
+heatmap(mat[,hc$labels], Colv=as.dendrogram(hc), Rowv=NA, scale="none", col=colorRampPalette(c("blue", "white", "red"))(100), ColSideColors=rainbow(4)[sg2])
+```
+
+# Pseudo-time trajectory analysis
+
+Cells may not always fall into distinct subpopulations. Rather, they may form a continuous gradient along a pseudo-time trajectory. For this type of analysis, we will use `Monocle` from the [Trapnell lab](http://www.nature.com/nbt/journal/v32/n4/full/nbt.2859.html). 
+
+```{r, 'monocle', fig.width=5, fig.height=5}
+library(monocle)
+
+# Monocle takes as input fpkms
+load('../../data/fpm.RData')
+expression.data <- fpm
+
+# create pheno data object 
+pheno.data.df <- data.frame(type=sg[colnames(fpm)], pagoda=sg2[colnames(fpm)]) 
+pd <- new('AnnotatedDataFrame', data = pheno.data.df) 
+
+# convert data object needed for Monocle
+data <- newCellDataSet(expression.data, phenoData = pd)
+```
+
+Typically, to order cells by progress, we want to reduce the number of genes analyzed. So we can select for a subset of genes that we believe are important in setting said ordering, such as overdispersed genes. In this example, we will simply choose genes based on prior knowledge. 
+
+```{r, 'monocle-2', fig.width=5, fig.height=5}
+ordering.genes <- markers # Select genes used for ordering
+data <- setOrderingFilter(data, ordering.genes) # Set list of genes for ordering
+data <- reduceDimension(data, use_irlba = FALSE) # Reduce dimensionality
+set.seed(0) # Monocle is also stochastic
+data <- orderCells(data, num_paths = 2, reverse = FALSE) # Order cells
+
+# Plot trajectory with inferred branches
+plot_spanning_tree(data) 
+
+# Compare with previous annotations
+plot_spanning_tree(data, color_by = "type") 
+
+# Compare with PAGODA annotations
+plot_spanning_tree(data, color_by = "pagoda") 
+```
