Fix WGCNA tutorial

--- a/_posts/2016-11-29-WGCNA2.md
+++ b/_posts/2016-11-29-WGCNA2.md
@@ -28,7 +28,8 @@ note that WGCNA and dependencies have been already installed for you.
     library(WGCNA)
     library("flashClust")
     options(stringsAsFactors = FALSE);
-    enableWGCNAThreads()
+    #enableWGCNAThreads()
+    disableWGCNAThreads()
 
 Loading the data; WGCNA requires genes be given in the columns. For the
 purpose of this exercise, we focus on a smaller set of n=500 most
@@ -71,7 +72,7 @@ and mean connectivity
     ## 15    20    0.947  -1.15          0.933   0.0501  1.88e-03   1.48
 
     # Plot the results
-    sizeGrWindow(9, 5)
+    # sizeGrWindow(9, 5)
     par(mfrow = c(1,2));
     cex1 = 0.9;
 
@@ -85,6 +86,8 @@ and mean connectivity
     # Mean connectivity as a function of the soft-thresholding power
     plot(sft$fitIndices[,1], sft$fitIndices[,5],xlab="Soft Threshold (power)",ylab="Mean Connectivity", type="n",main = paste("Mean connectivity"))
     text(sft$fitIndices[,1], sft$fitIndices[,5], labels=powers, cex=cex1,col="red")
+
+![](figure-2016/softpower%20selection-1.png)
 
 Generating adjacency and TOM similarity matrices based on the selected
 softpower
@@ -150,15 +153,17 @@ Module detection
     diag(dissTOM) = NA;
 
     #Visualize the Tom plot. Raise the dissimilarity matrix to a power  to bring out the module structure
-    sizeGrWindow(7,7)
+    #sizeGrWindow(7,7)
     TOMplot(dissTOM^4, geneTree, as.character(dynamicColors))
+
+![](figure-2016/module-detection-3.png)
 
 Extract modules
 
     module_colors= setdiff(unique(dynamicColors), "grey")
     for (color in module_colors){
         module=SubGeneNames[which(dynamicColors==color)]
-        write.table(module, paste("data/module_",color, ".txt",sep=""), sep="\t", row.names=FALSE, col.names=FALSE,quote=FALSE)
+        write.table(module, paste("module_",color, ".txt",sep=""), sep="\t", row.names=FALSE, col.names=FALSE,quote=FALSE)
         
     }
 
