Update WGCNA images

--- a/_posts/2016-11-29-WGCNA2.md
+++ b/_posts/2016-11-29-WGCNA2.md
@@ -87,7 +87,7 @@ and mean connectivity
     plot(sft$fitIndices[,1], sft$fitIndices[,5],xlab="Soft Threshold (power)",ylab="Mean Connectivity", type="n",main = paste("Mean connectivity"))
     text(sft$fitIndices[,1], sft$fitIndices[,5], labels=powers, cex=cex1,col="red")
 
-![](figure-2016/softpower%20selection-1.png)
+![](figure-2016/softpower_selection-1.png)
 
 Generating adjacency and TOM similarity matrices based on the selected
 softpower
